--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -1682,7 +1682,7 @@ a.product__text {
     width: 50% !important;
   }
   .SectionImageWithTextTemplate2 .wrap-rounded {
-    padding: 0 !important;
+    padding: 20px 30px !important;
   }
 }
 
